force-app/main/default/objects/Covid19__c/Covid19__c.object-meta.xml
<CustomObject>
    <label>Covid19</label>
    <nameField>
        <label>Indice Cuidarnos</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Covid19s</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>