force-app/main/default/objects/Covid19__c/fields/Administrative_Level_3__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Level_3__c</fullName>
    <label>Nivel 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>