force-app/main/default/objects/Covid19__c/fields/appointment_date__c.field-meta.xml
<CustomField>
    <fullName>appointment_date__c</fullName>
    <label>Fecha Turno</label>
    <type>DateTime</type>
</CustomField>