force-app/main/default/objects/Covid19__c/fields/Archive_Date__c.field-meta.xml
<CustomField>
    <fullName>Archive_Date__c</fullName>
    <label>Fecha Archivado</label>
    <type>DateTime</type>
</CustomField>