force-app/main/default/objects/Covid19__c/fields/centro_hisopado__c.field-meta.xml
<CustomField>
    <fullName>centro_hisopado__c</fullName>
    <label>Centro Hisopado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Centro De Diagnostico Y Prevencion COVID19 Plaza Teofilo- Diagnóstico Antigenos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>