force-app/main/default/objects/Covid19__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <label>Ciudadano</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Covid19s</relationshipLabel>
    <relationshipName>Cuidarnos_Datas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>