force-app/main/default/objects/Covid19__c/fields/Contacto_Estrecho__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Estrecho__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacto Estrecho</label>
    <type>Checkbox</type>
</CustomField>