force-app/main/default/objects/Covid19__c/fields/Contacto_Estrecho_GUID__c.field-meta.xml
<CustomField>
    <fullName>Contacto_Estrecho_GUID__c</fullName>
    <label>Contacto Estrecho GUID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>