force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Autoevaluado__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Autoevaluado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuidarnos Autoevaluado</label>
    <type>Checkbox</type>
</CustomField>