force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Comunidad_Date__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Comunidad_Date__c</fullName>
    <label>Fecha Estado</label>
    <type>DateTime</type>
</CustomField>