force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Comunidad_Level2__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Comunidad_Level2__c</fullName>
    <label>Comunidad Nivel 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>