force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Comunidad_Status__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Comunidad_Status__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sintomático</fullName>
            </value>
            <value>
                <fullName>Sospechoso</fullName>
            </value>
            <value>
                <fullName>Muestra</fullName>
            </value>
            <value>
                <fullName>Detectable</fullName>
            </value>
            <value>
                <fullName>No Detectable</fullName>
            </value>
            <value>
                <fullName>Inválido</fullName>
            </value>
            <value>
                <fullName>Notificado</fullName>
            </value>
            <value>
                <fullName>Descartado</fullName>
            </value>
            <value>
                <fullName>Asintomático</fullName>
                <label>Asintómatico</label>
            </value>
            <value>
                <fullName>Archivado</fullName>
            </value>
            <value>
                <fullName>Seguimiento COH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>