force-app/main/default/objects/Covid19__c/fields/cuidarnos_customer__c.field-meta.xml
<CustomField>
    <fullName>cuidarnos_customer__c</fullName>
    <label>Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pilar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>