force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Date__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Date__c</fullName>
    <formula>/*
IF(
    AND(
        ISBLANK(Cuidarnos_Comunidad_Date__c),
        ISBLANK(salud_date__c)
    ),
    NULL,
    TODAY() - 
    MIN(
        TODAY()-BLANKVALUE(Cuidarnos_Comunidad_Date__c,DATE(1,1,1)),
        TODAY()-BLANKVALUE(salud_date__c,DATE(1,1,1))
    )
)
*/
TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuidarnos Fecha Confirmacion Final</label>
    <type>Date</type>
</CustomField>