force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Hash_Etiqueta__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Hash_Etiqueta__c</fullName>
    <externalId>true</externalId>
    <label>Hash Etiqueta</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>