force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Level1__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Level1__c</fullName>
    <formula>IF(  ISBLANK( Cuidarnos_Comunidad_Level1__c ), salud_level1__c ,Cuidarnos_Comunidad_Level1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuidarnos Level1</label>
    <type>Text</type>
</CustomField>