force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Level2__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Level2__c</fullName>
    <formula>IF(  ISBLANK( Cuidarnos_Comunidad_Level2__c ), salud_level2__c ,Cuidarnos_Comunidad_Level2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuidarnos Level2</label>
    <type>Text</type>
</CustomField>