force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Marked__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Marked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuidarnos  Marcado</label>
    <type>Checkbox</type>
</CustomField>