force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Muestra_Laboratorio__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Muestra_Laboratorio__c</fullName>
    <label>Laboratorio Muestra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hidalgo</fullName>
            </value>
            <value>
                <fullName>CEMIC</fullName>
            </value>
            <value>
                <fullName>Clinicas</fullName>
            </value>
            <value>
                <fullName>Malbran</fullName>
            </value>
            <value>
                <fullName>Argenomics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>