force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Muestra_Result__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Muestra_Result__c</fullName>
    <label>Muestra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detectable</fullName>
            </value>
            <value>
                <fullName>No Detectable</fullName>
            </value>
            <value>
                <fullName>Inválido</fullName>
            </value>
            <value>
                <fullName>Invalido</fullName>
                <isActive>false</isActive>
                <label>Invalido</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>