force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Muestra_Result_Date__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Muestra_Result_Date__c</fullName>
    <label>Fecha Muestra</label>
    <type>DateTime</type>
</CustomField>