force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Observation__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Observation__c</fullName>
    <label>Observaciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>