force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Resultado_Etiqueta__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Resultado_Etiqueta__c</fullName>
    <label>ID Etiqueta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>