force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Sent__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuidarnos Enviado</label>
    <type>Checkbox</type>
</CustomField>