force-app/main/default/objects/Covid19__c/fields/Cuidarnos_Status__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Status__c</fullName>
    <formula>/*
IF(
  OR( ISBLANK(Cuidarnos_Comunidad_Date__c), (salud_date__c &gt;  Cuidarnos_Comunidad_Date__c )),
 BLANKVALUE(salud_status__c, &apos;&apos;),
 BLANKVALUE(Cuidarnos_Comunidad_Status__c, &apos;&apos;)
)
*/
&apos;&apos;</formula>
    <label>Cuidarnos Estado Confirmacion Final</label>
    <type>Text</type>
</CustomField>