force-app/main/default/objects/Covid19__c/fields/Estado_Epidemiologico__c.field-meta.xml
<CustomField>
    <fullName>Estado_Epidemiologico__c</fullName>
    <label>Estado Epidemiologico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>