force-app/main/default/objects/Covid19__c/fields/Fecha_Ultimo_Llamada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Ultimo_Llamada__c</fullName>
    <label>Fecha Ultima Llamada</label>
    <summarizedField>Cuidarnos_IVR_Calls__c.CreatedDate</summarizedField>
    <summaryForeignKey>Cuidarnos_IVR_Calls__c.Covid19__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>