force-app/main/default/objects/Covid19__c/fields/Follow_reason__c.field-meta.xml
<CustomField>
    <fullName>Follow_reason__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow reason</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Covid19s (Follow reason)</relationshipLabel>
    <relationshipName>Covid19s</relationshipName>
    <type>Lookup</type>
</CustomField>