force-app/main/default/objects/Covid19__c/fields/label_date__c.field-meta.xml
<CustomField>
    <fullName>label_date__c</fullName>
    <label>Fecha Etiqueta</label>
    <type>DateTime</type>
</CustomField>