force-app/main/default/objects/Covid19__c/fields/label_place__c.field-meta.xml
<CustomField>
    <fullName>label_place__c</fullName>
    <label>Lugar Etiqueta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tratado del Pilar</fullName>
            </value>
            <value>
                <fullName>Km 46</fullName>
            </value>
            <value>
                <fullName>Teófilo Tolosa</fullName>
            </value>
            <value>
                <fullName>Hospital Sanguinetti</fullName>
            </value>
            <value>
                <fullName>Test Rápido</fullName>
            </value>
            <value>
                <fullName>Centro Aislamiento Maristas</fullName>
            </value>
            <value>
                <fullName>Hospital Derqui</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>