force-app/main/default/objects/Covid19__c/fields/Mark_to_follow__c.field-meta.xml
<CustomField>
    <fullName>Mark_to_follow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark to follow</label>
    <type>Checkbox</type>
</CustomField>