force-app/main/default/objects/Covid19__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <label>Celular</label>
    <length>20</length>
    <type>Text</type>
</CustomField>