force-app/main/default/objects/Covid19__c/fields/Name_with_Link__c.field-meta.xml
<CustomField>
    <fullName>Name_with_Link__c</fullName>
    <formula>HYPERLINK(&apos;/s/contact/&apos; +   Citizen__c   + &apos;/&apos;, Citizen__r.FirstName + &apos; &apos; + Citizen__r.MiddleName  + &apos; &apos; + Citizen__r.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Completo</label>
    <type>Text</type>
</CustomField>