force-app/main/default/objects/Covid19__c/fields/Notificacion_Date__c.field-meta.xml
<CustomField>
    <fullName>Notificacion_Date__c</fullName>
    <label>Fecha Notificado</label>
    <type>DateTime</type>
</CustomField>