force-app/main/default/objects/Covid19__c/fields/Notifier_User__c.field-meta.xml
<CustomField>
    <fullName>Notifier_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Usuario actualizador de fecha de notificación</description>
    <label>Notifier User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Covid19s</relationshipName>
    <type>Lookup</type>
</CustomField>