force-app/main/default/objects/Covid19__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Teléfono Fijo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>