force-app/main/default/objects/Covid19__c/fields/proactiva_autoperception__c.field-meta.xml
<CustomField>
    <fullName>proactiva_autoperception__c</fullName>
    <label>Triage Autopercepcion Covid19</label>
    <length>255</length>
    <type>Text</type>
</CustomField>