force-app/main/default/objects/Covid19__c/fields/proactiva_contacttype__c.field-meta.xml
<CustomField>
    <fullName>proactiva_contacttype__c</fullName>
    <label>Triage Contacto Tipo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ninguno</fullName>
            </value>
            <value>
                <fullName>Trabajo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>