force-app/main/default/objects/Covid19__c/fields/proactiva_date__c.field-meta.xml
<CustomField>
    <fullName>proactiva_date__c</fullName>
    <label>Triage Fecha</label>
    <type>DateTime</type>
</CustomField>