force-app/main/default/objects/Covid19__c/fields/proactiva_frecuency__c.field-meta.xml
<CustomField>
    <fullName>proactiva_frecuency__c</fullName>
    <label>Triage Contacto Frecuencia</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Algunas veces</fullName>
            </value>
            <value>
                <fullName>Una sola vez</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>