force-app/main/default/objects/Covid19__c/fields/proactiva_geocoordenadas__c.field-meta.xml
<CustomField>
    <fullName>proactiva_geocoordenadas__c</fullName>
    <label>Triage Coordenadas</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>