force-app/main/default/objects/Covid19__c/fields/proactiva_hasbeencontact__c.field-meta.xml
<CustomField>
    <fullName>proactiva_hasbeencontact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triage Contacto</label>
    <type>Checkbox</type>
</CustomField>