force-app/main/default/objects/Covid19__c/fields/proactiva_hashistory__c.field-meta.xml
<CustomField>
    <fullName>proactiva_hashistory__c</fullName>
    <formula>NOT(ISBLANK(proactiva_history__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Triage Tiene Antecedentes</label>
    <type>Checkbox</type>
</CustomField>