force-app/main/default/objects/Covid19__c/fields/proactiva_hassymptoms__c.field-meta.xml
<CustomField>
    <fullName>proactiva_hassymptoms__c</fullName>
    <formula>NOT(ISBLANK( proactiva_symptoms__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Triage Tiene Sintomas</label>
    <type>Checkbox</type>
</CustomField>