force-app/main/default/objects/Covid19__c/fields/proactiva_health__c.field-meta.xml
<CustomField>
    <fullName>proactiva_health__c</fullName>
    <label>Triage Salud</label>
    <length>255</length>
    <type>Text</type>
</CustomField>