force-app/main/default/objects/Covid19__c/fields/proactiva_history__c.field-meta.xml
<CustomField>
    <fullName>proactiva_history__c</fullName>
    <label>Triage Antecedentes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Problemas cardíacos</fullName>
            </value>
            <value>
                <fullName>Mayor de 60 años</fullName>
            </value>
            <value>
                <fullName>Enfermedad cardiológica</fullName>
            </value>
            <value>
                <fullName>Cáncer</fullName>
            </value>
            <value>
                <fullName>Enfermedad renal crónica</fullName>
            </value>
            <value>
                <fullName>Estoy embarazada</fullName>
            </value>
            <value>
                <fullName>Enfermedad hepática</fullName>
            </value>
            <value>
                <fullName>Enfermermedad cardiológica</fullName>
            </value>
            <value>
                <fullName>Enfermedad renal</fullName>
            </value>
            <value>
                <fullName>Enfermedad respiratoria</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>