force-app/main/default/objects/Covid19__c/fields/proactiva_id__c.field-meta.xml
<CustomField>
    <fullName>proactiva_id__c</fullName>
    <label>Triage ID</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>