force-app/main/default/objects/Covid19__c/fields/proactiva_needs__c.field-meta.xml
<CustomField>
    <fullName>proactiva_needs__c</fullName>
    <label>Triage Necesidades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apoyo emocional</fullName>
            </value>
            <value>
                <fullName>Falta de alimentos</fullName>
            </value>
            <value>
                <fullName>Ninguna de los anteriores</fullName>
            </value>
            <value>
                <fullName>Problemas económicos</fullName>
            </value>
            <value>
                <fullName>Recursos médicos</fullName>
            </value>
            <value>
                <fullName>\Problemas económicos</fullName>
                <isActive>false</isActive>
                <label>\Problemas económicos</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>