force-app/main/default/objects/Covid19__c/fields/proactiva_resultgroup__c.field-meta.xml
<CustomField>
    <fullName>proactiva_resultgroup__c</fullName>
    <label>Triage Grupo Autoevaluación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>alto</fullName>
            </value>
            <value>
                <fullName>bajo</fullName>
            </value>
            <value>
                <fullName>medio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>