force-app/main/default/objects/Covid19__c/fields/proactiva_results__c.field-meta.xml
<CustomField>
    <fullName>proactiva_results__c</fullName>
    <label>Triage Resultado Autoevaluacion</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>