force-app/main/default/objects/Covid19__c/fields/proactiva_risk__c.field-meta.xml
<CustomField>
    <fullName>proactiva_risk__c</fullName>
    <label>Triage Riesgo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sintomático</fullName>
            </value>
            <value>
                <fullName>Asintomático</fullName>
            </value>
            <value>
                <fullName>Descartado</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
                <isActive>false</isActive>
                <label>Alto</label>
            </value>
            <value>
                <fullName>Bajo</fullName>
                <isActive>false</isActive>
                <label>Bajo</label>
            </value>
            <value>
                <fullName>Medio</fullName>
                <isActive>false</isActive>
                <label>Medio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>