force-app/main/default/objects/Covid19__c/fields/proactiva_source__c.field-meta.xml
<CustomField>
    <fullName>proactiva_source__c</fullName>
    <label>Triage Origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>