force-app/main/default/objects/Covid19__c/fields/proactiva_symptoms__c.field-meta.xml
<CustomField>
    <fullName>proactiva_symptoms__c</fullName>
    <label>Triage Sintomas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tos</fullName>
            </value>
            <value>
                <fullName>Dificultad respiratoria</fullName>
            </value>
            <value>
                <fullName>Nariz que moquea</fullName>
            </value>
            <value>
                <fullName>Empeoramiento de tos</fullName>
            </value>
            <value>
                <fullName>Dificultad respiratoria o Falta de aire</fullName>
            </value>
            <value>
                <fullName>Dolor de estómago</fullName>
            </value>
            <value>
                <fullName>Pérdida del olfato/ gusto</fullName>
            </value>
            <value>
                <fullName>Diarrea y/o vómitos</fullName>
            </value>
            <value>
                <fullName>Temblores</fullName>
            </value>
            <value>
                <fullName>Resfriado</fullName>
            </value>
            <value>
                <fullName>Dolor de garganta</fullName>
            </value>
            <value>
                <fullName>Dolor intenso de cabeza (cefalea)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>