force-app/main/default/objects/Covid19__c/fields/proactiva_temperature__c.field-meta.xml
<CustomField>
    <fullName>proactiva_temperature__c</fullName>
    <label>Triage Temperatura</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>