force-app/main/default/objects/Covid19__c/fields/proactiva_traveler__c.field-meta.xml
<CustomField>
    <fullName>proactiva_traveler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Triage Viajero</label>
    <type>Checkbox</type>
</CustomField>