force-app/main/default/objects/Covid19__c/fields/salud__c.field-meta.xml
<CustomField>
    <fullName>salud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SSalud</label>
    <type>Checkbox</type>
</CustomField>