force-app/main/default/objects/Covid19__c/fields/salud_date__c.field-meta.xml
<CustomField>
    <fullName>salud_date__c</fullName>
    <label>SSalud Fecha</label>
    <type>DateTime</type>
</CustomField>