force-app/main/default/objects/Covid19__c/fields/salud_level2__c.field-meta.xml
<CustomField>
    <fullName>salud_level2__c</fullName>
    <label>SSalud Nivel 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>