force-app/main/default/objects/Covid19__c/fields/salud_link__c.field-meta.xml
<CustomField>
    <fullName>salud_link__c</fullName>
    <label>SSalud Enlace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>