force-app/main/default/objects/Covid19__c/fields/salud_status__c.field-meta.xml
<CustomField>
    <fullName>salud_status__c</fullName>
    <label>SSalud Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>