force-app/main/default/objects/Covid19__c/fields/salud_symptom__c.field-meta.xml
<CustomField>
    <fullName>salud_symptom__c</fullName>
    <label>SSalud Sintomas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>