force-app/main/default/objects/Covid19__c/fields/salud_test__c.field-meta.xml
<CustomField>
    <fullName>salud_test__c</fullName>
    <label>SSalud Tipo Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>