force-app/main/default/objects/Covid19__c/fields/salud_treatment__c.field-meta.xml
<CustomField>
    <fullName>salud_treatment__c</fullName>
    <label>SSalud Tratamiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>