force-app/main/default/objects/Covid19__c/fields/salud_treatmenttype__c.field-meta.xml
<CustomField>
    <fullName>salud_treatmenttype__c</fullName>
    <label>SSalud Tratamiento Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>