force-app/main/default/objects/Covid19__c/fields/Telemedico_Date__c.field-meta.xml
<CustomField>
    <fullName>Telemedico_Date__c</fullName>
    <label>Fecha Telemedico</label>
    <type>DateTime</type>
</CustomField>