force-app/main/default/objects/Covid19__c/fields/Telemedico_Status__c.field-meta.xml
<CustomField>
    <fullName>Telemedico_Status__c</fullName>
    <label>Telemedico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sospechoso</fullName>
            </value>
            <value>
                <fullName>Descartado</fullName>
            </value>
            <value>
                <fullName>Detectable</fullName>
            </value>
            <value>
                <fullName>No detectable</fullName>
            </value>
            <value>
                <fullName>Inválido</fullName>
            </value>
            <value>
                <fullName>Seguimiento COH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>