force-app/main/default/objects/Covid19__c/fields/test_result__c.field-meta.xml
<CustomField>
    <fullName>test_result__c</fullName>
    <label>Resultado Externo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positivo</fullName>
            </value>
            <value>
                <fullName>Negativo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>