force-app/main/default/objects/Covid19__c/fields/test_result_date__c.field-meta.xml
<CustomField>
    <fullName>test_result_date__c</fullName>
    <label>Resultado Externo Fecha</label>
    <type>DateTime</type>
</CustomField>