force-app/main/default/objects/Covid19__c/fields/test_results_place__c.field-meta.xml
<CustomField>
    <fullName>test_results_place__c</fullName>
    <label>Resultado Externo Lugar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEMIC</fullName>
            </value>
            <value>
                <fullName>Clinicas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>