force-app/main/default/objects/Covid19__c/fields/test_results_testtype__c.field-meta.xml
<CustomField>
    <fullName>test_results_testtype__c</fullName>
    <label>Resultado Externo Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tipo A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>