force-app/main/default/objects/Covid19__c/fields/testserologico__c.field-meta.xml
<CustomField>
    <fullName>testserologico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Serologico</label>
    <type>Checkbox</type>
</CustomField>