force-app/main/default/objects/Covid19__c/fields/testserologico_fecha__c.field-meta.xml
<CustomField>
    <fullName>testserologico_fecha__c</fullName>
    <label>Test Serologico Fecha</label>
    <type>DateTime</type>
</CustomField>