force-app/main/default/objects/Covid19__c/fields/testserologico_IGG__c.field-meta.xml
<CustomField>
    <fullName>testserologico_IGG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Serologico IGG</label>
    <type>Checkbox</type>
</CustomField>