force-app/main/default/objects/Covid19__c/fields/testserologico_IGG_resultado__c.field-meta.xml
<CustomField>
    <fullName>testserologico_IGG_resultado__c</fullName>
    <label>Test Serologico IGG resultado</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Negativo</fullName>
            </value>
            <value>
                <fullName>Positivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>