force-app/main/default/objects/Covid19__c/fields/testserologico_IGM__c.field-meta.xml
<CustomField>
    <fullName>testserologico_IGM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Serologico IGM</label>
    <type>Checkbox</type>
</CustomField>