force-app/main/default/objects/Covid19__c/fields/testserologico_lugar__c.field-meta.xml
<CustomField>
    <fullName>testserologico_lugar__c</fullName>
    <label>Test Serologico Lugar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Km 46</fullName>
            </value>
            <value>
                <fullName>Teófilo Tolosa</fullName>
            </value>
            <value>
                <fullName>Test móvil</fullName>
            </value>
            <value>
                <fullName>Hospital Sanguinetti</fullName>
            </value>
            <value>
                <fullName>CAPS</fullName>
            </value>
            <value>
                <fullName>Derqui</fullName>
            </value>
            <value>
                <fullName>Falcon</fullName>
            </value>
            <value>
                <fullName>Maternidad</fullName>
            </value>
            <value>
                <fullName>Pilares</fullName>
            </value>
            <value>
                <fullName>CEPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>