force-app/main/default/objects/Covid19__c/fields/Tipo_de_Test__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Test__c</fullName>
    <label>Tipo de Estudio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCR</fullName>
            </value>
            <value>
                <fullName>Antigeno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>