force-app/main/default/objects/Covid19__c/fields/turno_hisopado__c.field-meta.xml
<CustomField>
    <fullName>turno_hisopado__c</fullName>
    <label>Turno Hisopado</label>
    <type>Date</type>
</CustomField>