force-app/main/default/objects/Covid19__c/validationRules/Age_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Edad__c &lt; 0, Edad__c &gt; 130)</errorConditionFormula>
    <errorMessage>Invalid age.</errorMessage>
</ValidationRule>